gcc/lto-streamer-out.c
@@ -1642,6 +1642,11 @@ output_cfg (struct output_block *ob, struct function *fn)
 	  streamer_write_uhwi (ob, loop->nb_iterations_estimate.low);
 	  streamer_write_hwi (ob, loop->nb_iterations_estimate.high);
 	}
+
+      /* Write OMP SIMD related info.  */
+      streamer_write_hwi (ob, loop->safelen);
+      streamer_write_hwi (ob, loop->force_vect);
+      stream_write_tree (ob, loop->simduid, true);
     }
 
   ob->main_stream = tmp_stream;
@@ -1735,6 +1740,8 @@ output_struct_function_base (struct output_block *ob, struct function *fn)
   bp_pack_value (&bp, fn->has_nonlocal_label, 1);
   bp_pack_value (&bp, fn->calls_alloca, 1);
   bp_pack_value (&bp, fn->calls_setjmp, 1);
+  bp_pack_value (&bp, fn->has_force_vect_loops, 1);
+  bp_pack_value (&bp, fn->has_simduid_loops, 1);
   bp_pack_value (&bp, fn->va_list_fpr_size, 8);
   bp_pack_value (&bp, fn->va_list_gpr_size, 8);
 
